# Portfolio_Optimization

./: .dockerignore  .gitignore  .pre-commit-config.yml  Makefile  README.md  docker-compose.yml  fix_comparison.py  fix_predictor.py  mlflow.db  patch_walk_forward.py  pyproject.toml  requirements.txt  requiurements.txt  save_models.py  tatus
.github/workflows/: cd.yml  ci.yml
.streamlit/: config.toml
Document/: portfolio_optimization_proposal.docx  ~$rtfolio_optimization_proposal.docx
Document/Implementation details/: week1_implementation.html  week2_lstm_implementation.html  week3_rl_gym_environment.html  week4_rl_training (1).html  week5_backtesting_engine.html  week6_fastapi_serving.html  week7_streamlit_dashboard.html  week8_docker_cicd_fixed.html  week9_fixed.html
backtesting/: backtest_results.json  metrics.py  report.py  walk_forward.py
dashboard/: Dockerfile  app.py  data_utils.py
dashboard/pages/: 1_Performance.py  2_Allocation.py  3_Comparison.py  4_Frontier.py
data/: __init__.py  config.py
data/ingestion/: feature_engineering.py  fetch_data.py  macro_features.py
mlops/airflow/: Dockerfile
mlops/monitoring/: alert_trigger.py  prometheus.yml
models/classical/: markowitz.py
models/forecasting/: arima_baseline.py  dataset.py  evaluate.py  lstm_model.py  train_forecaster.py  tune.py
serving/: Dockerfile  main.py  metrics.py  model_loader.py  predictor.py  retrain_router.py  schemas.py
tests/: test_agent.py  test_api.py  test_backtesting.py  test_data_pipeline.py  test_env.py  test_forecasting.py  test_monitoring.py
(+10 files in other folders)
